samples/_failures_safe/1761485539_5eaf45_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_525fbf96.c: In function ‘main’:
./samples/SAFE/__tmp_525fbf96.c:187:5: error: expected identifier or ‘(’ at end of input
  187 |     for (int
      |     ^~~
./samples/SAFE/__tmp_525fbf96.c:187:5: error: expected declaration or statement at end of input
